# burn-central

./: Cargo.toml  README.md  README_IROH.md  watch-docs.sh
.cargo/: audit.toml
.github/workflows/: ci.yml  publish.yml
crates/burn-central/: Cargo.toml
crates/burn-central-artifact/: Cargo.toml
crates/burn-central-artifact/src/: artifact_download.rs  download.rs  lib.rs  transfer.rs  upload.rs
crates/burn-central-artifact/src/bundle/: fs.rs  mod.rs
crates/burn-central-artifact/src/bundle/memory/: sources.rs
crates/burn-central-artifact/src/tools/: path.rs
crates/burn-central-core/: Cargo.toml  README.md  build.rs
crates/burn-central-core/src/: client.rs  lib.rs  schemas.rs
crates/burn-central-core/src/artifacts/: mod.rs
crates/burn-central-core/src/bundle/: fs.rs  mod.rs
crates/burn-central-core/src/experiment/: args.rs  base.rs  cancellation.rs  mod.rs  socket.rs
crates/burn-central-core/src/integration/: interrupter.rs  mod.rs
crates/burn-central-core/src/integration/checkpoint/: mod.rs
crates/burn-central-core/src/integration/log/: mod.rs
crates/burn-central-core/src/integration/metric/: mod.rs
crates/burn-central-core/src/log/: application_logger.rs
crates/burn-central-core/src/log/application_logger/: v1.rs
crates/burn-central-core/src/metrics/: metric_logger.rs
crates/burn-central-core/src/metrics/metric_logger/: mod.rs  v0_19.rs
crates/burn-central-core/src/models/: mod.rs
crates/burn-central-core/src/record/: checkpoint.rs
crates/burn-central-core/src/record/checkpoint/: mod.rs  v1.rs
crates/burn-central-core/src/tools/: mod.rs
crates/burn-central-experiment/: Cargo.toml
crates/burn-central-experiment/src/: cancellation.rs  context.rs  error.rs  lib.rs  local.rs  reader.rs  session.rs
crates/burn-central-experiment/src/integration/: interrupter.rs  mod.rs
crates/burn-central-experiment/src/integration/checkpoint/: mod.rs
crates/burn-central-experiment/src/integration/metric/: mod.rs
crates/burn-central-experiment/src/integration/tracing/: layer.rs  mod.rs  registry.rs  visitor.rs
crates/burn-central-experiment/src/integration/training/: checkpoint.rs  metric.rs  mod.rs
crates/burn-central-experiment/src/remote/: base.rs  log_store.rs  mod.rs  socket.rs
crates/burn-central-fleet/: Cargo.toml
crates/burn-central-fleet/src/: auth_client.rs  error.rs  inference.rs  lib.rs  model.rs  session.rs  state.rs  telemetry.rs
crates/burn-central-fleet/src/telemetry/: envelope.rs  event.rs  inference.rs  logs.rs  metrics.rs  mod.rs  request.rs
crates/burn-central-fleet/src/telemetry/pipeline/: batcher.rs  collector.rs  mod.rs  outbox.rs  shipper.rs
crates/burn-central-fleet/src/telemetry/pipeline/outbox/: wal.rs
crates/burn-central-inference/: Cargo.toml
crates/burn-central-inference/src/: erased.rs  lib.rs  observer.rs  stream.rs  writer.rs
crates/burn-central-macros/: Cargo.toml
crates/burn-central-macros/src/: lib.rs
crates/burn-central-registry/: Cargo.toml
crates/burn-central-registry/src/: artifact_download.rs  builder.rs  cache.rs  diagnostics.rs  download.rs  error.rs  lib.rs  manifest.rs  model.rs  registry.rs
crates/burn-central-runtime/: Cargo.toml
crates/burn-central-runtime/src/: cli.rs  error.rs  executor.rs  input.rs  lib.rs  output.rs  param.rs  routine.rs  telemetry.rs  types.rs
crates/burn-central-runtime/src/inference/: builder.rs  context.rs  core.rs  erased.rs  fleet.rs  helper.rs  init.rs  input.rs  mod.rs  params.rs  registry.rs  session.rs  stream.rs  telemetry.rs  tests.rs
crates/burn-central-runtime/src/inference/fleet/: mod.rs  model.rs  state.rs
crates/burn-central-runtime/src/params/: args.rs  artifact_loader.rs  cancellation.rs  default.rs  mod.rs
crates/burn-central/src/: lib.rs
crates/inference-actor-demo/: Cargo.toml
crates/inference-actor-demo/examples/: axum_client.rs  simple.rs  simple_direct.rs
crates/inference-actor-demo/examples/axum_server/: app_layer.rs  main.rs  user_lib.rs
crates/inference-actor-demo/src/: erased.rs  helper.rs  lib.rs  runtime.rs
crates/tracel-core/src/experiment/remote/: session.rs  socket.rs
crates/tracel-core/src/experiment/remote/cloud/: mod.rs
crates/tracel-core/src/experiment/remote/station/: mod.rs
crates/tracel-experiment/src/: lib.rs
examples/: registry_model_decode.rs
examples/llama-burn/: BATCHED_INFERENCE.md  BATCHED_QUICKSTART.md  BUGFIX_KV_CACHE_ISOLATION.md  CHANGELOG_BATCHED.md  CONCURRENT_INFERENCE.md  Cargo.toml  INFERENCE_PROTOTYPE.md  INFERENCE_STRATEGIES.md  QUICKSTART_CONCURRENT.md  README.md  SUMMARY_CONCURRENT_IMPROVEMENTS.md  test.sh
examples/llama-burn/examples/: axum_client.rs  axum_server.rs  batched_server.rs  benchmark_concurrency.rs  concurrent_server.rs  continuous_server.rs  inference_server.rs  simple_batch.rs
examples/llama-burn/src/: cache.rs  inference.rs  lib.rs  llama.rs  transformer.rs
examples/llama-iroh-gossip/: Cargo.toml  NOTE.md  README.md
examples/llama-iroh-gossip/examples/: standalone_demo.rs
examples/llama-iroh-gossip/src/: main.rs  node.rs  protocol.rs
scripts/: check-all-versions.sh  test-all-versions.sh
xtask/: Cargo.toml
