[package]
name = "burn-central-artifact"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
crossbeam = { workspace = true }
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
serde_json = { workspace = true }
burn-central-core = { workspace = true }
thiserror = { workspace = true }
