[package]
name = "burn-central-artifact"
description = "Artifact bundle and transfer utilities for Burn Central SDK."
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
crossbeam = { workspace = true }
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tempfile = "3.26.0"
