[package]
name = "burn-central-core"
authors.workspace = true
categories.workspace = true
description = "Burn Central Client."
keywords.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
default = []
burn_0_19 = ["dep:burn_0_19"]
burn_0_20 = ["dep:burn_0_20"] 

[dependencies]
burn_0_19 = { package = "burn", version = "0.19.1", optional = true, default-features = false, features = ["train"] }
burn_0_20 = { package = "burn", version = "=0.20.0-pre.5", optional = true, default-features = false, features = ["train"] }

log.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-core.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
regex.workspace = true
once_cell.workspace = true
crossbeam.workspace = true
json-patch.workspace = true
burn-central-client.workspace = true

[dev-dependencies]
burn_0_20 = { package = "burn", version = "=0.20.0-pre.5", default-features = false, features = ["ndarray"] }
anyhow = { workspace = true }
