[package]
name = "burn-central-core"
authors.workspace = true
categories.workspace = true
description = "Burn Central Core."
keywords.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
