[package]
name = "burn-central-registry"
authors.workspace = true
categories.workspace = true
description = "Burn Central local registry/cache for model artifacts."
keywords.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
burn-central-client.workspace = true
burn-central-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
crossbeam.workspace = true
url.workspace = true
reqwest = { version = "0.13.2", features = ["blocking"] }
directories = "5.0.1"
