[package]
name = "burn-central"
authors.workspace = true
categories.workspace = true
description = "Burn Central SDK toolkit"
keywords.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
default = []
burn_0_19 = ["burn-central-core/burn_0_19", "burn-central-runtime/burn_0_19"]
burn_0_20 = ["burn-central-core/burn_0_20", "burn-central-runtime/burn_0_20"]

[dependencies]
burn-central-core.workspace = true
burn-central-macros.workspace = true
burn-central-runtime.workspace = true
